--- a/NubeBooks/Views/Admin/Movimiento.cshtml
+++ b/NubeBooks/Views/Admin/Movimiento.cshtml
@@ -109,7 +109,8 @@
                         BuscarCategoria($('#IdComprobante').val(), false);
                     }
                 }
-                GetComprobantesAjax(identidad, idtdoc);
+                if (@ViewBag.IdTipoCuenta != 2)
+                {GetComprobantesAjax(identidad, idtdoc);}
             }
         }
 
