--- a/NubeBooks/Views/Admin/ComprobantesEgreso.cshtml
+++ b/NubeBooks/Views/Admin/ComprobantesEgreso.cshtml
@@ -53,6 +53,7 @@
     <a href="@Url.Action("Comprobante", "Admin", new { id = 0, idTipoComprobante = 2 })" class="btn m-b-xs btn-sm btn-success btn-addon pull-right"><i class="fa fa-plus"></i>Agregar Nuevo</a>
     <h1 class="m-n font-thin h3">@ViewBag.Title</h1>
 </div>
+@Html.Partial("_showAlertMessages")
 <div class="wrapper-md">
     <div class="panel panel-default">
         <div class="table-responsive">
