--- a/NubeBooks/Views/Admin/ComprobantesIngreso.cshtml
+++ b/NubeBooks/Views/Admin/ComprobantesIngreso.cshtml
@@ -54,6 +54,7 @@
     <a href="@Url.Action("Comprobante", "Admin", new { id = 0, idTipoComprobante = 1 })" class="btn m-b-xs btn-sm btn-success btn-addon pull-right"><i class="fa fa-plus"></i>Agregar Nuevo</a>
     <h1 class="m-n font-thin h3">@ViewBag.Title</h1>
 </div>
+@Html.Partial("_showAlertMessages")
 <div class="wrapper-md">
     <div class="panel panel-default">
         @*<div ng-app="myApp" ng-controller="myCtrl">
