--- a/NubeBooks/Views/Admin/EntidadesClientes.cshtml
+++ b/NubeBooks/Views/Admin/EntidadesClientes.cshtml
@@ -9,6 +9,7 @@
     <a href="@Url.Action("Entidad", "Admin", new { id = 0, idTipoEntidad = 1 })" class="btn m-b-xs btn-sm btn-success btn-addon pull-right"><i class="fa fa-plus"></i>Agregar Nuevo</a>
     <h1 class="m-n font-thin h3">@ViewBag.Title</h1>
 </div>
+@Html.Partial("_showAlertMessages")
 <div class="wrapper-md">
     <div class="panel panel-default">
         <div class="table-responsive">
