--- a/NubeBooks/Views/Admin/Area.cshtml
+++ b/NubeBooks/Views/Admin/Area.cshtml
@@ -26,7 +26,6 @@
                     <div class="row m-b">
                         <div class="col-xs-12 col-md-6">
                             @Html.Partial("_showAlertMessages")
-
                             <section class="panel panel-default">
                                 <header class="panel-heading font-bold">Formulario de Registro</header>
                                 <div class="panel-body">
@@ -65,6 +64,7 @@
                         </div>
                     </div>
                 }
+                @*@Html.Partial("_showAlertMessages")*@
             </div>
         </div>
     </section>
