--- a/NubeBooks/Views/Shared/_LayoutAdmin.cshtml
+++ b/NubeBooks/Views/Shared/_LayoutAdmin.cshtml
@@ -201,7 +201,7 @@
                                         </a>
                                     </li>
                                     <li class="@ViewBag.navbar.lstOptions[9].lstOptions[1].cadena">
-                                        <a href="@Url.Action("InventariosEgresos", "Admin")">
+                                        <a href="@Url.Action("InventariosEgreso", "Admin")">
                                             <span>Egresos</span>
                                         </a>
                                     </li>
@@ -411,6 +411,7 @@
     <script src="~/Content/themes/admin-nb/js/ui-toggle.js"></script>
     <script src="~/Content/themes/admin-nb/js/ui-client.js"></script>
     @Scripts.Render("~/Content/themes/admin/js/datepicker/bootstrap-datepicker.js")
+    @Scripts.Render("~/Content/themes/admin/js/main.js")
 
     @RenderSection("scripts", required: false)
 
